syntax = "proto3";

                 package salon;
service SalonService {
 rpc createSalon (SalonCreateInput) returns (Salon) {}
rpc salons (findManyParams) returns (stream Salon) {}
rpc salon (SalonWhereUniqueInput) returns (Salon) {}
rpc updateSalon (SalonUpdateInput) returns (Salon) {}
rpc deleteSalon (SalonWhereUniqueInput) returns (Salon) {}
rpc findManySalons (SalonWhereUniqueInput) returns (stream Attendance) {}
rpc updateSalons (AttendanceParams) returns (stream Attendance) {}
rpc connectSalons (AttendanceParams) returns (Attendance) {}
rpc disconnectSalons (AttendanceParams) returns (Attendance) {}
rpc findManySalons (SalonWhereUniqueInput) returns (stream EmployeeDailyStat) {}
rpc updateSalons (EmployeeDailyStatParams) returns (stream EmployeeDailyStat) {}
rpc connectSalons (EmployeeDailyStatParams) returns (EmployeeDailyStat) {}
rpc disconnectSalons (EmployeeDailyStatParams) returns (EmployeeDailyStat) {}
rpc findManySalons (SalonWhereUniqueInput) returns (stream EmployeeStat) {}
rpc updateSalons (EmployeeStatParams) returns (stream EmployeeStat) {}
rpc connectSalons (EmployeeStatParams) returns (EmployeeStat) {}
rpc disconnectSalons (EmployeeStatParams) returns (EmployeeStat) {}
rpc findManySalons (SalonWhereUniqueInput) returns (stream EmployeeTask) {}
rpc updateSalons (EmployeeTaskParams) returns (stream EmployeeTask) {}
rpc connectSalons (EmployeeTaskParams) returns (EmployeeTask) {}
rpc disconnectSalons (EmployeeTaskParams) returns (EmployeeTask) {}
rpc findManySalons (SalonWhereUniqueInput) returns (stream EmployeeWorkSchedule) {}
rpc updateSalons (EmployeeWorkScheduleParams) returns (stream EmployeeWorkSchedule) {}
rpc connectSalons (EmployeeWorkScheduleParams) returns (EmployeeWorkSchedule) {}
rpc disconnectSalons (EmployeeWorkScheduleParams) returns (EmployeeWorkSchedule) {}
rpc findManySalons (SalonWhereUniqueInput) returns (stream Order) {}
rpc updateSalons (OrderParams) returns (stream Order) {}
rpc connectSalons (OrderParams) returns (Order) {}
rpc disconnectSalons (OrderParams) returns (Order) {}
rpc findManySalons (SalonWhereUniqueInput) returns (stream Queue) {}
rpc updateSalons (QueueParams) returns (stream Queue) {}
rpc connectSalons (QueueParams) returns (Queue) {}
rpc disconnectSalons (QueueParams) returns (Queue) {}
rpc findManySalons (SalonWhereUniqueInput) returns (stream SalonAccount) {}
rpc updateSalons (SalonAccountParams) returns (stream SalonAccount) {}
rpc connectSalons (SalonAccountParams) returns (SalonAccount) {}
rpc disconnectSalons (SalonAccountParams) returns (SalonAccount) {}
rpc findManySalons (SalonWhereUniqueInput) returns (stream SalonRatingLike) {}
rpc updateSalons (SalonRatingLikeParams) returns (stream SalonRatingLike) {}
rpc connectSalons (SalonRatingLikeParams) returns (SalonRatingLike) {}
rpc disconnectSalons (SalonRatingLikeParams) returns (SalonRatingLike) {}
rpc findManySalons (SalonWhereUniqueInput) returns (stream SalonRating) {}
rpc updateSalons (SalonRatingParams) returns (stream SalonRating) {}
rpc connectSalons (SalonRatingParams) returns (SalonRating) {}
rpc disconnectSalons (SalonRatingParams) returns (SalonRating) {}
rpc findManySalons (SalonWhereUniqueInput) returns (stream SalonService) {}
rpc updateSalons (SalonServiceParams) returns (stream SalonService) {}
rpc connectSalons (SalonServiceParams) returns (SalonService) {}
rpc disconnectSalons (SalonServiceParams) returns (SalonService) {}
rpc findManySalons (SalonWhereUniqueInput) returns (stream TimeSlot) {}
rpc updateSalons (TimeSlotParams) returns (stream TimeSlot) {}
rpc connectSalons (TimeSlotParams) returns (TimeSlot) {}
rpc disconnectSalons (TimeSlotParams) returns (TimeSlot) {}
rpc findManySalons (SalonWhereUniqueInput) returns (stream UserAccount) {}
rpc updateSalons (UserAccountParams) returns (stream UserAccount) {}
rpc connectSalons (UserAccountParams) returns (UserAccount) {}
rpc disconnectSalons (UserAccountParams) returns (UserAccount) {}
rpc findManySalons (SalonWhereUniqueInput) returns (stream UserFavoriteSalon) {}
rpc updateSalons (UserFavoriteSalonParams) returns (stream UserFavoriteSalon) {}
rpc connectSalons (UserFavoriteSalonParams) returns (UserFavoriteSalon) {}
rpc disconnectSalons (UserFavoriteSalonParams) returns (UserFavoriteSalon) {}
rpc findManySalonsUserProfilesSalonIdTosalons (SalonWhereUniqueInput) returns (stream UserProfile) {}
rpc updateSalonsUserProfilesSalonIdTosalons (UserProfileParams) returns (stream UserProfile) {}
rpc connectSalonsUserProfilesSalonIdTosalons (UserProfileParams) returns (UserProfile) {}
rpc disconnectSalonsUserProfilesSalonIdTosalons (UserProfileParams) returns (UserProfile) {} 
 }
message SalonCreateInput {
bool active = 1;
string address = 2;
repeated Attendance attendances = 3;
string barbers = 4;
string categories = 5;
string closeTime = 6;
string createdAt = 7;
string description = 8;
string email = 9;
repeated EmployeeDailyStat employeeDailyStats = 10;
repeated EmployeeStat employeeStats = 11;
repeated EmployeeTask employeeTasks = 12;
repeated EmployeeWorkSchedule employeeWorkSchedules = 13;
string id = 14;
string images = 15;
string img = 16;
string latLng = 17;
string location = 18;
string logo = 19;
string name = 20;
bool open = 21;
string openTime = 22;
repeated Order orders = 23;
string phone = 24;
repeated Queue queues = 25;
repeated SalonAccount salonAccounts = 26;
repeated SalonRatingLike salonRatingLikes = 27;
repeated SalonRating salonRatings = 28;
repeated SalonService salonServices = 29;
repeated TimeSlot timeSlots = 30;
string timezone = 31;
string updatedAt = 32;
repeated UserAccount userAccounts = 33;
repeated UserFavoriteSalon userFavoriteSalons = 34;
repeated UserProfile userProfilesUserProfilesSalonIdTosalons = 35;
string website = 36;
};
message Salon {
bool active = 1;
string address = 2;
repeated Attendance attendances = 3;
string barbers = 4;
string categories = 5;
string closeTime = 6;
string createdAt = 7;
string description = 8;
string email = 9;
repeated EmployeeDailyStat employeeDailyStats = 10;
repeated EmployeeStat employeeStats = 11;
repeated EmployeeTask employeeTasks = 12;
repeated EmployeeWorkSchedule employeeWorkSchedules = 13;
string id = 14;
string images = 15;
string img = 16;
string latLng = 17;
string location = 18;
string logo = 19;
string name = 20;
bool open = 21;
string openTime = 22;
repeated Order orders = 23;
string phone = 24;
repeated Queue queues = 25;
repeated SalonAccount salonAccounts = 26;
repeated SalonRatingLike salonRatingLikes = 27;
repeated SalonRating salonRatings = 28;
repeated SalonService salonServices = 29;
repeated TimeSlot timeSlots = 30;
string timezone = 31;
string updatedAt = 32;
repeated UserAccount userAccounts = 33;
repeated UserFavoriteSalon userFavoriteSalons = 34;
repeated UserProfile userProfilesUserProfilesSalonIdTosalons = 35;
string website = 36;
};
message SalonWhereUniqueInput {
bool active = 1;
string address = 2;
repeated Attendance attendances = 3;
string barbers = 4;
string categories = 5;
string closeTime = 6;
string createdAt = 7;
string description = 8;
string email = 9;
repeated EmployeeDailyStat employeeDailyStats = 10;
repeated EmployeeStat employeeStats = 11;
repeated EmployeeTask employeeTasks = 12;
repeated EmployeeWorkSchedule employeeWorkSchedules = 13;
string id = 14;
string images = 15;
string img = 16;
string latLng = 17;
string location = 18;
string logo = 19;
string name = 20;
bool open = 21;
string openTime = 22;
repeated Order orders = 23;
string phone = 24;
repeated Queue queues = 25;
repeated SalonAccount salonAccounts = 26;
repeated SalonRatingLike salonRatingLikes = 27;
repeated SalonRating salonRatings = 28;
repeated SalonService salonServices = 29;
repeated TimeSlot timeSlots = 30;
string timezone = 31;
string updatedAt = 32;
repeated UserAccount userAccounts = 33;
repeated UserFavoriteSalon userFavoriteSalons = 34;
repeated UserProfile userProfilesUserProfilesSalonIdTosalons = 35;
string website = 36;
};
message SalonUpdateInput {
bool active = 1;
string address = 2;
repeated Attendance attendances = 3;
string barbers = 4;
string categories = 5;
string closeTime = 6;
string createdAt = 7;
string description = 8;
string email = 9;
repeated EmployeeDailyStat employeeDailyStats = 10;
repeated EmployeeStat employeeStats = 11;
repeated EmployeeTask employeeTasks = 12;
repeated EmployeeWorkSchedule employeeWorkSchedules = 13;
string id = 14;
string images = 15;
string img = 16;
string latLng = 17;
string location = 18;
string logo = 19;
string name = 20;
bool open = 21;
string openTime = 22;
repeated Order orders = 23;
string phone = 24;
repeated Queue queues = 25;
repeated SalonAccount salonAccounts = 26;
repeated SalonRatingLike salonRatingLikes = 27;
repeated SalonRating salonRatings = 28;
repeated SalonService salonServices = 29;
repeated TimeSlot timeSlots = 30;
string timezone = 31;
string updatedAt = 32;
repeated UserAccount userAccounts = 33;
repeated UserFavoriteSalon userFavoriteSalons = 34;
repeated UserProfile userProfilesUserProfilesSalonIdTosalons = 35;
string website = 36;
};
message findManyParams {

};
message Attendance {
repeated string action = 1;
string actionTime = 2;
string clockin = 3;
string clockout = 4;
bool completed = 5;
string createdAt = 6;
string date = 7;
string id = 8;
string updatedAt = 9;
};
message AttendanceWhereUniqueInput {
repeated string action = 1;
string actionTime = 2;
string clockin = 3;
string clockout = 4;
bool completed = 5;
string createdAt = 6;
string date = 7;
string id = 8;
string updatedAt = 9;
};
message AttendanceParams {
SalonWhereUniqueInput salonWhereUniqueInput = 1;
AttendanceWhereUniqueInput attendanceWhereUniqueInput = 2;
};
message EmployeeDailyStat {
int32 averageOrderAmount = 1;
int32 averageServiceTime = 2;
int32 avgServiceTimeChangePercent = 3;
string avgServiceTimeTrend = 4;
string bestServiceTime = 5;
int32 canceledOrders = 6;
int32 cardRevenue = 7;
int32 cashRevenue = 8;
int32 clientsChangePercent = 9;
string clientsTrend = 10;
int32 completedOrders = 11;
string createdAt = 12;
int32 dailyRating = 13;
string date = 14;
int32 efficiencyChangePercent = 15;
int32 efficiencyRate = 16;
string efficiencyTrend = 17;
string firstOrderTime = 18;
string id = 19;
string lastOrderTime = 20;
int32 monthToDateOrders = 21;
int32 monthToDateRevenue = 22;
int32 newClients = 23;
int32 offPeakOrders = 24;
int32 ordersChangePercent = 25;
int32 ordersCount = 26;
string ordersTrend = 27;
int32 overtimeHours = 28;
int32 peakHoursOrders = 29;
int32 performanceScore = 30;
int32 prevMonthOrders = 31;
int32 prevMonthRevenue = 32;
int32 ratingChangePercent = 33;
string ratingTrend = 34;
int32 ratingsCount = 35;
int32 repeatClients = 36;
int32 revenue = 37;
int32 revenueChangePercent = 38;
string revenueTrend = 39;
int32 scheduledHours = 40;
int32 servicesCount = 41;
int32 totalBreaksTime = 42;
int32 totalClients = 43;
int32 totalIdleTime = 44;
int32 totalWorkedHours = 45;
string updatedAt = 46;
int32 workTime = 47;
string worstServiceTime = 48;
};
message EmployeeDailyStatWhereUniqueInput {
int32 averageOrderAmount = 1;
int32 averageServiceTime = 2;
int32 avgServiceTimeChangePercent = 3;
string avgServiceTimeTrend = 4;
string bestServiceTime = 5;
int32 canceledOrders = 6;
int32 cardRevenue = 7;
int32 cashRevenue = 8;
int32 clientsChangePercent = 9;
string clientsTrend = 10;
int32 completedOrders = 11;
string createdAt = 12;
int32 dailyRating = 13;
string date = 14;
int32 efficiencyChangePercent = 15;
int32 efficiencyRate = 16;
string efficiencyTrend = 17;
string firstOrderTime = 18;
string id = 19;
string lastOrderTime = 20;
int32 monthToDateOrders = 21;
int32 monthToDateRevenue = 22;
int32 newClients = 23;
int32 offPeakOrders = 24;
int32 ordersChangePercent = 25;
int32 ordersCount = 26;
string ordersTrend = 27;
int32 overtimeHours = 28;
int32 peakHoursOrders = 29;
int32 performanceScore = 30;
int32 prevMonthOrders = 31;
int32 prevMonthRevenue = 32;
int32 ratingChangePercent = 33;
string ratingTrend = 34;
int32 ratingsCount = 35;
int32 repeatClients = 36;
int32 revenue = 37;
int32 revenueChangePercent = 38;
string revenueTrend = 39;
int32 scheduledHours = 40;
int32 servicesCount = 41;
int32 totalBreaksTime = 42;
int32 totalClients = 43;
int32 totalIdleTime = 44;
int32 totalWorkedHours = 45;
string updatedAt = 46;
int32 workTime = 47;
string worstServiceTime = 48;
};
message EmployeeDailyStatParams {
SalonWhereUniqueInput salonWhereUniqueInput = 1;
EmployeeDailyStatWhereUniqueInput employeedailystatWhereUniqueInput = 2;
};
message EmployeeStat {
int32 averageOrderAmount = 1;
int32 averageOrderDuration = 2;
int32 averageRating = 3;
int32 averageServiceTime = 4;
int32 canceledOrdersCount = 5;
int32 cardPaymentsAmount = 6;
int32 cashPaymentsAmount = 7;
int32 consistencyScore = 8;
int32 conversionRate = 9;
string createdAt = 10;
int32 currentMonthOrders = 11;
int32 currentMonthRevenue = 12;
int32 efficiencyChangePercent = 13;
int32 efficiencyRate = 14;
int32 efficiencyScore = 15;
string efficiencyTrend = 16;
int32 executionRate = 17;
int32 fillRate = 18;
string id = 19;
string lastOrderAt = 20;
int32 negativeReviews = 21;
int32 ordersChangePercent = 22;
int32 ordersGrowthRate = 23;
int32 ordersPerDay = 24;
string ordersTrend = 25;
int32 overtimeCount = 26;
int32 peakHoursOrders = 27;
int32 peakPerformanceRate = 28;
int32 performanceChangePercent = 29;
int32 performanceScore = 30;
string performanceTrend = 31;
int32 positiveReviews = 32;
int32 prevMonthEfficiencyRate = 33;
int32 prevMonthPerformanceScore = 34;
int32 prevMonthTotalOrders = 35;
int32 prevMonthTotalRevenue = 36;
int32 previousMonthOrders = 37;
int32 previousMonthRevenue = 38;
int32 qualityScore = 39;
int32 rating = 40;
int32 ratingChangePercent = 41;
string ratingTrend = 42;
int32 revenueChangePercent = 43;
int32 revenueGrowthRate = 44;
int32 revenuePerHour = 45;
string revenueTrend = 46;
int32 servicesChangePercent = 47;
int32 servicesGrowthRate = 48;
int32 servicesPerHour = 49;
string servicesTrend = 50;
int32 totalDowntimeHours = 51;
int32 totalExecutionTime = 52;
int32 totalIdleTime = 53;
int32 totalOrders = 54;
int32 totalRatings = 55;
int32 totalRevenue = 56;
int32 totalServices = 57;
int32 totalWorkTime = 58;
int32 totalWorkedHours = 59;
string updatedAt = 60;
int32 utilizationRate = 61;
int32 workloadPercentage = 62;
int32 yearToDateOrders = 63;
int32 yearToDateRevenue = 64;
int32 yearToDateServices = 65;
};
message EmployeeStatWhereUniqueInput {
int32 averageOrderAmount = 1;
int32 averageOrderDuration = 2;
int32 averageRating = 3;
int32 averageServiceTime = 4;
int32 canceledOrdersCount = 5;
int32 cardPaymentsAmount = 6;
int32 cashPaymentsAmount = 7;
int32 consistencyScore = 8;
int32 conversionRate = 9;
string createdAt = 10;
int32 currentMonthOrders = 11;
int32 currentMonthRevenue = 12;
int32 efficiencyChangePercent = 13;
int32 efficiencyRate = 14;
int32 efficiencyScore = 15;
string efficiencyTrend = 16;
int32 executionRate = 17;
int32 fillRate = 18;
string id = 19;
string lastOrderAt = 20;
int32 negativeReviews = 21;
int32 ordersChangePercent = 22;
int32 ordersGrowthRate = 23;
int32 ordersPerDay = 24;
string ordersTrend = 25;
int32 overtimeCount = 26;
int32 peakHoursOrders = 27;
int32 peakPerformanceRate = 28;
int32 performanceChangePercent = 29;
int32 performanceScore = 30;
string performanceTrend = 31;
int32 positiveReviews = 32;
int32 prevMonthEfficiencyRate = 33;
int32 prevMonthPerformanceScore = 34;
int32 prevMonthTotalOrders = 35;
int32 prevMonthTotalRevenue = 36;
int32 previousMonthOrders = 37;
int32 previousMonthRevenue = 38;
int32 qualityScore = 39;
int32 rating = 40;
int32 ratingChangePercent = 41;
string ratingTrend = 42;
int32 revenueChangePercent = 43;
int32 revenueGrowthRate = 44;
int32 revenuePerHour = 45;
string revenueTrend = 46;
int32 servicesChangePercent = 47;
int32 servicesGrowthRate = 48;
int32 servicesPerHour = 49;
string servicesTrend = 50;
int32 totalDowntimeHours = 51;
int32 totalExecutionTime = 52;
int32 totalIdleTime = 53;
int32 totalOrders = 54;
int32 totalRatings = 55;
int32 totalRevenue = 56;
int32 totalServices = 57;
int32 totalWorkTime = 58;
int32 totalWorkedHours = 59;
string updatedAt = 60;
int32 utilizationRate = 61;
int32 workloadPercentage = 62;
int32 yearToDateOrders = 63;
int32 yearToDateRevenue = 64;
int32 yearToDateServices = 65;
};
message EmployeeStatParams {
SalonWhereUniqueInput salonWhereUniqueInput = 1;
EmployeeStatWhereUniqueInput employeestatWhereUniqueInput = 2;
};
message EmployeeTask {
int32 actualDuration = 1;
string actualStartTime = 2;
string completedAt = 3;
string createdAt = 4;
int32 estimatedDuration = 5;
string id = 6;
string notes = 7;
repeated string order_type = 8;
string scheduledStartTime = 9;
repeated string task_status = 10;
string updatedAt = 11;
};
message EmployeeTaskWhereUniqueInput {
int32 actualDuration = 1;
string actualStartTime = 2;
string completedAt = 3;
string createdAt = 4;
int32 estimatedDuration = 5;
string id = 6;
string notes = 7;
repeated string order_type = 8;
string scheduledStartTime = 9;
repeated string task_status = 10;
string updatedAt = 11;
};
message EmployeeTaskParams {
SalonWhereUniqueInput salonWhereUniqueInput = 1;
EmployeeTaskWhereUniqueInput employeetaskWhereUniqueInput = 2;
};
message EmployeeWorkSchedule {
string breakEnd = 1;
string breakStart = 2;
repeated string day_of_week = 3;
string id = 4;
string shiftEnd = 5;
string shiftStart = 6;
};
message EmployeeWorkScheduleWhereUniqueInput {
string breakEnd = 1;
string breakStart = 2;
repeated string day_of_week = 3;
string id = 4;
string shiftEnd = 5;
string shiftStart = 6;
};
message EmployeeWorkScheduleParams {
SalonWhereUniqueInput salonWhereUniqueInput = 1;
EmployeeWorkScheduleWhereUniqueInput employeeworkscheduleWhereUniqueInput = 2;
};
message Order {
int32 amount = 1;
bool canceled = 2;
string canceledReason = 3;
bool completed = 4;
string completedAt = 5;
string createdAt = 6;
int32 depositAmount = 7;
int32 discount = 8;
int32 discountAmount = 9;
string id = 10;
int32 loyaltyPointsEarned = 11;
int32 loyaltyPointsUsed = 12;
string orderImageId = 13;
string orderNumber = 14;
repeated string order_type = 15;
string services = 16;
bool started = 17;
string startedAt = 18;
repeated string status = 19;
int32 totalAmount = 20;
string updatedAt = 21;
};
message OrderWhereUniqueInput {
int32 amount = 1;
bool canceled = 2;
string canceledReason = 3;
bool completed = 4;
string completedAt = 5;
string createdAt = 6;
int32 depositAmount = 7;
int32 discount = 8;
int32 discountAmount = 9;
string id = 10;
int32 loyaltyPointsEarned = 11;
int32 loyaltyPointsUsed = 12;
string orderImageId = 13;
string orderNumber = 14;
repeated string order_type = 15;
string services = 16;
bool started = 17;
string startedAt = 18;
repeated string status = 19;
int32 totalAmount = 20;
string updatedAt = 21;
};
message OrderParams {
SalonWhereUniqueInput salonWhereUniqueInput = 1;
OrderWhereUniqueInput orderWhereUniqueInput = 2;
};
message Queue {
bool completed = 1;
string completedAt = 2;
string createdAt = 3;
int32 estimatedWaitTime = 4;
string id = 5;
int32 queueNumber = 6;
string updatedAt = 7;
};
message QueueWhereUniqueInput {
bool completed = 1;
string completedAt = 2;
string createdAt = 3;
int32 estimatedWaitTime = 4;
string id = 5;
int32 queueNumber = 6;
string updatedAt = 7;
};
message QueueParams {
SalonWhereUniqueInput salonWhereUniqueInput = 1;
QueueWhereUniqueInput queueWhereUniqueInput = 2;
};
message SalonAccount {
int32 balance = 1;
string createdAt = 2;
string id = 3;
string name = 4;
int32 numberField = 5;
string typeField = 6;
string updatedAt = 7;
};
message SalonAccountWhereUniqueInput {
int32 balance = 1;
string createdAt = 2;
string id = 3;
string name = 4;
int32 numberField = 5;
string typeField = 6;
string updatedAt = 7;
};
message SalonAccountParams {
SalonWhereUniqueInput salonWhereUniqueInput = 1;
SalonAccountWhereUniqueInput salonaccountWhereUniqueInput = 2;
};
message SalonRatingLike {
string createdAt = 1;
string id = 2;
string review = 3;
};
message SalonRatingLikeWhereUniqueInput {
string createdAt = 1;
string id = 2;
string review = 3;
};
message SalonRatingLikeParams {
SalonWhereUniqueInput salonWhereUniqueInput = 1;
SalonRatingLikeWhereUniqueInput salonratinglikeWhereUniqueInput = 2;
};
message SalonRating {
string createdAt = 1;
string id = 2;
int32 rating = 3;
string review = 4;
};
message SalonRatingWhereUniqueInput {
string createdAt = 1;
string id = 2;
int32 rating = 3;
string review = 4;
};
message SalonRatingParams {
SalonWhereUniqueInput salonWhereUniqueInput = 1;
SalonRatingWhereUniqueInput salonratingWhereUniqueInput = 2;
};
message SalonService {
string description = 1;
int32 duration = 2;
string id = 3;
string img = 4;
string name = 5;
int32 price = 6;
};
message SalonServiceWhereUniqueInput {
string description = 1;
int32 duration = 2;
string id = 3;
string img = 4;
string name = 5;
int32 price = 6;
};
message SalonServiceParams {
SalonWhereUniqueInput salonWhereUniqueInput = 1;
SalonServiceWhereUniqueInput salonserviceWhereUniqueInput = 2;
};
message TimeSlot {
string createdAt = 1;
string endTime = 2;
string id = 3;
bool isAvailable = 4;
string slotDate = 5;
string slotTime = 6;
string startTime = 7;
string updatedAt = 8;
};
message TimeSlotWhereUniqueInput {
string createdAt = 1;
string endTime = 2;
string id = 3;
bool isAvailable = 4;
string slotDate = 5;
string slotTime = 6;
string startTime = 7;
string updatedAt = 8;
};
message TimeSlotParams {
SalonWhereUniqueInput salonWhereUniqueInput = 1;
TimeSlotWhereUniqueInput timeslotWhereUniqueInput = 2;
};
message UserAccount {
int32 balance = 1;
string createdAt = 2;
string id = 3;
string name = 4;
int32 numberField = 5;
string typeField = 6;
string updatedAt = 7;
};
message UserAccountWhereUniqueInput {
int32 balance = 1;
string createdAt = 2;
string id = 3;
string name = 4;
int32 numberField = 5;
string typeField = 6;
string updatedAt = 7;
};
message UserAccountParams {
SalonWhereUniqueInput salonWhereUniqueInput = 1;
UserAccountWhereUniqueInput useraccountWhereUniqueInput = 2;
};
message UserFavoriteSalon {
string createdAt = 1;
bool favorite = 2;
string id = 3;
};
message UserFavoriteSalonWhereUniqueInput {
string createdAt = 1;
bool favorite = 2;
string id = 3;
};
message UserFavoriteSalonParams {
SalonWhereUniqueInput salonWhereUniqueInput = 1;
UserFavoriteSalonWhereUniqueInput userfavoritesalonWhereUniqueInput = 2;
};
message UserProfile {
string avatarUrl = 1;
string bio = 2;
string createdAt = 3;
string dateOfBirth = 4;
string deletedAt = 5;
string email = 6;
string employeeDismissalAt = 7;
string employeeEmploymentAt = 8;
string firstName = 9;
string fullName = 10;
bool fullRegistered = 11;
string hiredDate = 12;
string id = 13;
bool isAdmin = 14;
bool isBarber = 15;
bool isEmployee = 16;
string jobTitle = 17;
string lastName = 18;
string location = 19;
int32 loyaltyPoints = 20;
string phone = 21;
string updatedAt = 22;
string website = 23;
};
message UserProfileWhereUniqueInput {
string avatarUrl = 1;
string bio = 2;
string createdAt = 3;
string dateOfBirth = 4;
string deletedAt = 5;
string email = 6;
string employeeDismissalAt = 7;
string employeeEmploymentAt = 8;
string firstName = 9;
string fullName = 10;
bool fullRegistered = 11;
string hiredDate = 12;
string id = 13;
bool isAdmin = 14;
bool isBarber = 15;
bool isEmployee = 16;
string jobTitle = 17;
string lastName = 18;
string location = 19;
int32 loyaltyPoints = 20;
string phone = 21;
string updatedAt = 22;
string website = 23;
};
message UserProfileParams {
SalonWhereUniqueInput salonWhereUniqueInput = 1;
UserProfileWhereUniqueInput userprofileWhereUniqueInput = 2;
};