syntax = "proto3";

                 package salonServiceCategory;
service SalonServiceCategoryService {
 rpc createSalonServiceCategory (SalonServiceCategoryCreateInput) returns (SalonServiceCategory) {}
rpc salonServiceCategories (findManyParams) returns (stream SalonServiceCategory) {}
rpc salonServiceCategory (SalonServiceCategoryWhereUniqueInput) returns (SalonServiceCategory) {}
rpc updateSalonServiceCategory (SalonServiceCategoryUpdateInput) returns (SalonServiceCategory) {}
rpc deleteSalonServiceCategory (SalonServiceCategoryWhereUniqueInput) returns (SalonServiceCategory) {}
rpc findManySalonServiceCategories (SalonServiceCategoryWhereUniqueInput) returns (stream SalonService) {}
rpc updateSalonServiceCategories (SalonServiceParams) returns (stream SalonService) {}
rpc connectSalonServiceCategories (SalonServiceParams) returns (SalonService) {}
rpc disconnectSalonServiceCategories (SalonServiceParams) returns (SalonService) {} 
 }
message SalonServiceCategoryCreateInput {
string id = 1;
string name = 2;
repeated SalonService salonServices = 3;
};
message SalonServiceCategory {
string id = 1;
string name = 2;
repeated SalonService salonServices = 3;
};
message SalonServiceCategoryWhereUniqueInput {
string id = 1;
string name = 2;
repeated SalonService salonServices = 3;
};
message SalonServiceCategoryUpdateInput {
string id = 1;
string name = 2;
repeated SalonService salonServices = 3;
};
message findManyParams {

};
message SalonService {
string description = 1;
int32 duration = 2;
string id = 3;
string img = 4;
string name = 5;
int32 price = 6;
};
message SalonServiceWhereUniqueInput {
string description = 1;
int32 duration = 2;
string id = 3;
string img = 4;
string name = 5;
int32 price = 6;
};
message SalonServiceParams {
SalonServiceCategoryWhereUniqueInput salonServiceCategoryWhereUniqueInput = 1;
SalonServiceWhereUniqueInput salonserviceWhereUniqueInput = 2;
};