syntax = "proto3";

                 package userGender;
service UserGenderService {
 rpc createUserGender (UserGenderCreateInput) returns (UserGender) {}
rpc userGenders (findManyParams) returns (stream UserGender) {}
rpc userGender (UserGenderWhereUniqueInput) returns (UserGender) {}
rpc updateUserGender (UserGenderUpdateInput) returns (UserGender) {}
rpc deleteUserGender (UserGenderWhereUniqueInput) returns (UserGender) {}
rpc findManyUserGenders (UserGenderWhereUniqueInput) returns (stream UserProfile) {}
rpc updateUserGenders (UserProfileParams) returns (stream UserProfile) {}
rpc connectUserGenders (UserProfileParams) returns (UserProfile) {}
rpc disconnectUserGenders (UserProfileParams) returns (UserProfile) {} 
 }
message UserGenderCreateInput {
string gender = 1;
string id = 2;
repeated UserProfile userProfiles = 3;
};
message UserGender {
string gender = 1;
string id = 2;
repeated UserProfile userProfiles = 3;
};
message UserGenderWhereUniqueInput {
string gender = 1;
string id = 2;
repeated UserProfile userProfiles = 3;
};
message UserGenderUpdateInput {
string gender = 1;
string id = 2;
repeated UserProfile userProfiles = 3;
};
message findManyParams {

};
message UserProfile {
string avatarUrl = 1;
string bio = 2;
string createdAt = 3;
string dateOfBirth = 4;
string deletedAt = 5;
string email = 6;
string employeeDismissalAt = 7;
string employeeEmploymentAt = 8;
string firstName = 9;
string fullName = 10;
bool fullRegistered = 11;
string hiredDate = 12;
string id = 13;
bool isAdmin = 14;
bool isBarber = 15;
bool isEmployee = 16;
string jobTitle = 17;
string lastName = 18;
string location = 19;
int32 loyaltyPoints = 20;
string phone = 21;
string updatedAt = 22;
string website = 23;
};
message UserProfileWhereUniqueInput {
string avatarUrl = 1;
string bio = 2;
string createdAt = 3;
string dateOfBirth = 4;
string deletedAt = 5;
string email = 6;
string employeeDismissalAt = 7;
string employeeEmploymentAt = 8;
string firstName = 9;
string fullName = 10;
bool fullRegistered = 11;
string hiredDate = 12;
string id = 13;
bool isAdmin = 14;
bool isBarber = 15;
bool isEmployee = 16;
string jobTitle = 17;
string lastName = 18;
string location = 19;
int32 loyaltyPoints = 20;
string phone = 21;
string updatedAt = 22;
string website = 23;
};
message UserProfileParams {
UserGenderWhereUniqueInput userGenderWhereUniqueInput = 1;
UserProfileWhereUniqueInput userprofileWhereUniqueInput = 2;
};