import { ClientOptions, Transport } from "@nestjs/microservices";
import { ConfigService } from "@nestjs/config";

const configService: ConfigService = new ConfigService();

export const grpcClientOptions: ClientOptions = {
  transport: Transport.GRPC,
  options: {
    package: [
      "apikey",
      "appointment",
      "attendance",
      "chatmessage",
      "chat",
      "conversation",
      "deposit",
      "discount",
      "employeedailystat",
      "employeestat",
      "employeetask",
      "employeeworkschedule",
      "loyaltyprogram",
      "loyaltytransaction",
      "metric",
      "mobilepaymentprovider",
      "notification",
      "orderimage",
      "order",
      "payment",
      "payroll",
      "promocode",
      "queue",
      "salonaccount",
      "saloncategory",
      "salonratinglike",
      "salonrating",
      "salonservicecategory",
      "salonservice",
      "salon",
      "schedule",
      "timeslot",
      "transaction",
      "useraccount",
      "useractivity",
      "useraddress",
      "userbankcard",
      "userfavoritemaster",
      "userfavoritesalon",
      "usergender",
      "usernotificationsetting",
      "userprofile",
      "userrating",
      "verificationcode",
      "webhook",
      "user"
    ],
    protoPath: [
      "src/apikey/apikey.proto",
      "src/appointment/appointment.proto",
      "src/attendance/attendance.proto",
      "src/chatmessage/chatmessage.proto",
      "src/chat/chat.proto",
      "src/conversation/conversation.proto",
      "src/deposit/deposit.proto",
      "src/discount/discount.proto",
      "src/employeedailystat/employeedailystat.proto",
      "src/employeestat/employeestat.proto",
      "src/employeetask/employeetask.proto",
      "src/employeeworkschedule/employeeworkschedule.proto",
      "src/loyaltyprogram/loyaltyprogram.proto",
      "src/loyaltytransaction/loyaltytransaction.proto",
      "src/metric/metric.proto",
      "src/mobilepaymentprovider/mobilepaymentprovider.proto",
      "src/notification/notification.proto",
      "src/orderimage/orderimage.proto",
      "src/order/order.proto",
      "src/payment/payment.proto",
      "src/payroll/payroll.proto",
      "src/promocode/promocode.proto",
      "src/queue/queue.proto",
      "src/salonaccount/salonaccount.proto",
      "src/saloncategory/saloncategory.proto",
      "src/salonratinglike/salonratinglike.proto",
      "src/salonrating/salonrating.proto",
      "src/salonservicecategory/salonservicecategory.proto",
      "src/salonservice/salonservice.proto",
      "src/salon/salon.proto",
      "src/schedule/schedule.proto",
      "src/timeslot/timeslot.proto",
      "src/transaction/transaction.proto",
      "src/useraccount/useraccount.proto",
      "src/useractivity/useractivity.proto",
      "src/useraddress/useraddress.proto",
      "src/userbankcard/userbankcard.proto",
      "src/userfavoritemaster/userfavoritemaster.proto",
      "src/userfavoritesalon/userfavoritesalon.proto",
      "src/usergender/usergender.proto",
      "src/usernotificationsetting/usernotificationsetting.proto",
      "src/userprofile/userprofile.proto",
      "src/userrating/userrating.proto",
      "src/verificationcode/verificationcode.proto",
      "src/webhook/webhook.proto",
      "src/user/user.proto"
    ],
    url: configService.get<string>("GRPC_CLIENT_URL_PATH"),
  },
};
